--- a/templates/Park/show.html.twig
+++ b/templates/Park/show.html.twig
@@ -169,9 +169,12 @@
                         <div class="media-right text-center note-responsive" style="vertical-align: middle;">
                             {% if coaster.isRateable %}
                                 {% if is_granted('ROLE_USER') %}
-                                    <div class="rating-coaster center"
-                                         data-coaster="{{ coaster.id }}"
-                                         data-rateit-value="{{ app.user.coasterRating(coaster).value|default(0) }}"
+                                    <div data-controller="rating"
+                                         data-rating-coaster-id-value="{{ coaster.id }}"
+                                         data-rating-current-value-value="{{ app.user.coasterRating(coaster).value|default(0) }}"
+                                         data-rating-rating-id-value="{{ app.user.coasterRating(coaster).id|default('') }}"
+                                         data-rating-locale-value="{{ app.request.locale }}"
+                                         data-rating-readonly-value="false"
                                          style="font-size: 22px;"></div>
                                 {% endif %}
                             {% endif %}
@@ -185,11 +188,6 @@
             </ul>
         </div>
     </div>
-{% endblock %}
-
-{% block javascripts %}
-
-    <script src="{{ asset('js/pages/rating.js') }}"></script>
 {% endblock %}
 
 {% block stylesheets %}
