--- a/templates/Review/form.html.twig
+++ b/templates/Review/form.html.twig
@@ -4,12 +4,6 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block javascripts %}
-
-  <script type="text/javascript">
-    $('document').ready(function() {
-      $('.rating-coaster').rateit({max: 5, step: 0.5, backingfld: '#review_value', resetable: false, mode: 'font'});
-    });
-  </script>
 {% endblock %}
 
 {% block stylesheets %}
@@ -27,8 +21,14 @@
         <label class="control-label is-visible">{{ 'review.value'|trans }}</label>
         <span class="text-danger">*</span>
         <br>
-        {{ form_widget(form.value) }}
-        <div class="rating-coaster" data-rateit-backingfld="#review_value" style="font-size: 22px;"></div>
+        {{ form_widget(form.value, {'attr': {'style': 'display:none;'}}) }}
+        <div data-controller="rating review-rating"
+             data-rating-coaster-id-value="{{ coaster.id }}"
+             data-rating-current-value-value="{{ form.value.vars.value|default(0) }}"
+             data-rating-locale-value="{{ app.request.locale }}"
+             data-rating-readonly-value="false"
+             data-review-rating-field-id-value="review_value"
+             style="font-size: 22px;"></div>
       </div>
       <div class="form-group">
         {{ form_label(form.riddenAt, "", {'label_attr': {'class': 'control-label'}}) }}
